--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+#specific files/directories
+words/
+images/
+audio/
+current_words.json
+word_list.json
+
+#IDE
+.idea/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[codz]
